# HUVar

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  NOTICE  README.md  pyproject.toml
.audit/: DATA_REQUIREMENTS.md
.audit/cspec_by_criterion/: BA1.md  BP1.md  BP2.md  BP3.md  BP4.md  BP5.md  BP7.md  BS1.md  BS2.md  BS3.md  BS4.md  PM1.md  PM2.md  PM3.md  PM4.md  PM5.md  PM6.md  PP1.md  PP2.md  PP3.md  PP4.md  PS1.md  PS2.md  PS3.md  PS4.md  PVS1.md  _spec_index.tsv
.audit/reports/: BA1.md  BP1.md  BP3.md  BP4.md  BP7.md  BS1.md  BS2.md  PM1.md  PM2.md  PM4.md  PM5.md  PP2.md  PP3.md  PS1.md  PVS1.md  _SUMMARY.md
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: cleanup-candidates.md  vcep_criteria_provenance.md  vcep_criteria_provenance.tsv
resources/: gene_inheritance.tsv
resources/GRCh37/: erepo_manual_criteria_hg19.tsv  vcep_pvs1_exons.tsv
resources/GRCh38/: erepo_manual_criteria_hg38.tsv  vcep_pvs1_exons.tsv
resources/clingen/: README.md  disease_prevalence.tsv  pm1_hotspots.tsv
resources/shared/: disease_prevalence.tsv  disease_prevalence_multispec.tsv  mane_select.tsv  pm1_hotspots.tsv  pm4_regions.tsv  ps1_paralog_map.tsv  tp53_pp3_bp4_codes.tsv  vcep_pvs1_splice_exons.tsv
scripts/: build_criteria_provenance.py  build_disease_thresholds.py  build_gnomad_coverage.py  build_mane_map.py  build_pm1_hotspots.py  build_pm4_regions.py  build_ps1_paralog_map.py  build_tp53_codes.py  build_vcep_pvs1_exons.py  diagnose_clinvar_pm5.py  diagnose_pm5.py  setup_data.py
src/acmg_classifier/: __init__.py  cli.py  config.py  exceptions.py
src/acmg_classifier/annotation/: normalizer.py  orchestrator.py
src/acmg_classifier/classification/: classifier_2015.py  classifier_bayesian.py
src/acmg_classifier/criteria/: allele_frequency.py  base.py  blosum62.py  bp_genes.py  bs2_genes.py  cspec_overlay.py  grantham.py  insilico_genes.py  pm1_hotspots.py  pm2_genes.py  pm4_regions.py  pm5_genes.py  pp2_genes.py  ps1_genes.py  ps1_paralog.py  pvs1_genes.py  registry.py  revel_genes.py
src/acmg_classifier/criteria/benign/: ba1.py  bp1.py  bp3.py  bp4.py  bp7.py  bs1.py  bs2.py  manual.py
src/acmg_classifier/criteria/pathogenic/: manual.py  pm1.py  pm2.py  pm4.py  pm5.py  pp1.py  pp2.py  pp3.py  pp5.py  ps1.py  ps3.py  ps4.py  pvs1.py
src/acmg_classifier/io/: json_writer.py  report_writer.py  supplement_reader.py  tsv_writer.py  vcf_reader.py
src/acmg_classifier/local_db/: alphamissense_db.py  bayesdel_db.py  cadd_db.py  clinvar_sqlite.py  clinvar_vcf.py  conservation.py  coverage_db.py  esm1b_db.py  gnomad_db.py  inheritance_db.py  mane_db.py  repeatmasker_db.py  revel_db.py  vep_runner.py
src/acmg_classifier/local_db/splice/: base.py  mmsplice_predictor.py  openspliceai_predictor.py  spliceai_predictor.py  squirls_predictor.py
src/acmg_classifier/models/: annotation.py  classification.py  criteria.py  enums.py  supplement.py  variant.py
src/acmg_classifier/pipeline/: pipeline.py
src/acmg_classifier/pvs1/: apc.py  decision_tree.py  nmd_predictor.py  transcript_evaluator.py  vcep_pvs1.py  vcep_pvs1_exons.py
src/acmg_classifier/setup/: build_inheritance_map.py  clinvar_builder.py  downloader.py  esm1b_builder.py  gnomad_builder.py  vep_installer.py
src/acmg_classifier/utils/: chrom.py  progress.py  tabix.py
tests/fixtures/: sample.vcf  sample_supplement.tsv
tests/unit/: test_af_mutual_exclusion.py  test_allele_frequency.py  test_bp1_bp3.py  test_bp7_intronic_parametric.py  test_bp7_phylop.py  test_bp_splice_cutoff.py  test_bs2_applicability.py  test_bs2_clinvar_fallback.py  test_bs2_count.py  test_bs2_strength_tiers.py  test_build_extraction_fixes.py  test_classification.py  test_clinvar_builder_schema.py  test_clinvar_pm5_pp2.py  test_conservation.py  test_criteria_benign.py  test_criteria_pathogenic.py  test_cspec_multispec.py  test_esm1b_builder.py  test_esm1b_uniprot_resolution.py  test_gnomad_faf.py  test_gnomad_merge.py  test_gnomad_noncancer_db.py  test_gnomad_precompute.py  test_gnomad_select_vcf.py  test_insilico_genes.py  test_mane_fallback.py  test_models.py  test_normalizer.py  test_openspliceai_predictor.py  test_pm1_curated.py  test_pm1_hotspots.py  test_pm2_depth_gate.py  test_pm2_gene_specific.py  test_pm2_non_cancer.py  test_pm2_per_gene.py  test_pm4_applicability.py  test_pm4_gates.py  test_pm4_regions.py  test_pm4_strength_tiers.py  (+21 more)
