[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "acmg-classifier"
version = "0.1.0"
description = "ACMG 2015 + ClinGen SVI variant pathogenicity classifier (fully local)"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "Department of Clinical and Molecular Genetics, Hiroshima University Hospital" },
]
keywords = [
    "acmg",
    "amp",
    "clingen",
    "variant interpretation",
    "clinical genomics",
    "bioinformatics",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "click>=8.1",
    "cyvcf2>=0.31",
    "duckdb>=0.10",
    "pysam>=0.22",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "structlog>=24.1",
    "rich>=13.7",
    "tenacity>=8.2",
    # Default splice predictor. setup_data.py stages BOTH the OSAI_MANE model
    # weights AND the gene annotation table (grch37.txt/grch38.txt) — the
    # `variant -A grch38` keyword resolves to a relative path that does not
    # exist in an installed package, so an explicit annotation file is required.
    "openspliceai",
    # BP7 conservation gate: per-base phyloP100way lookup from a UCSC bigWig.
    # A default dependency so the gate works automatically once the (optional,
    # ~9 GB) phyloP bigWig is downloaded — without it, an installed-but-unread
    # bigWig silently disables BP7. Builds against libcurl/zlib (preinstalled on
    # typical Linux); reading is no-op when the bigWig file is absent.
    "pyBigWig>=0.3",
]

[project.urls]
Homepage = "https://github.com/hnakahara/HUVar"
Repository = "https://github.com/hnakahara/HUVar"
Issues = "https://github.com/hnakahara/HUVar/issues"
Changelog = "https://github.com/hnakahara/HUVar/blob/main/CHANGELOG.md"

[project.scripts]
acmg-classify = "acmg_classifier.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
]
# BP7 conservation gate reader. pyBigWig is now a DEFAULT dependency (see
# [project].dependencies); this extra is retained only for backward
# compatibility so `pip install -e ".[conservation]"` keeps working.
conservation = [
    "pyBigWig>=0.3",
]
# MMSplice DISABLED: its dependency chain (numpy<2, cyvcf2<=0.30.x, pyranges
# 0.0.x) conflicts with this project's cyvcf2/numpy. Retained, commented out,
# to re-enable if the dependency situation is resolved. Would also need
# "setuptools<81" (mmsplice imports pkg_resources at module load).
# mmsplice = [
#     "mmsplice>=2.3",
#     "setuptools<81",
# ]

[tool.hatch.build.targets.wheel]
packages = ["src/acmg_classifier"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
